# openalex_explorer

./: .gitignore  README.md  SKILL.md  build_db.py  manage.py  pyproject.toml  write_review.py
config/: languages.json  settings.yaml
specs/: my_test.json  petrochemical_industry.json  petrochemical_japanese.json  sna_applications.json  sna_applications_en.json  supply_chain.json  test_input.json
src/: __init__.py  config.py  context.py  filters.py  http_client.py  keywords.py  llm.py  memory.py  models.py  paper_profile.py  pipeline_async.py  prompts.py  search.py  session.py  skill.py  state.py  store.py  summarizer.py  topic.py  utils.py
src/agents/: agent.py  prompts.json
src/agents/configs/: searcher.json
src/review/: __init__.py  models.py  orchestrator.py
src/sources/: __init__.py  arxiv.py  base.py  openalex.py
src/test/: __init__.py  test_arxiv.py  test_config.py  test_context.py  test_keywords.py  test_llm.py  test_openalex.py  test_search.py  test_sources_base.py  test_store.py  test_topic.py  test_utils.py
