[project]
name = "openalex-explorer-skill"
version = "0.1.0"
description = "LLM-powered literature review automation skill"
requires-python = ">=3.12"
dependencies = [
    "arxiv>=2.1.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "litellm>=1.60.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.5.0",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["src/test"]
addopts = "-m 'not slow'"
markers = [
    "slow: mark test as slow (network-dependent or heavy computation)",
    "llm: mark test as LLM-dependent (requires API key)",
]
